# MediaPlatform

./: README.md  docker-compose.yml  send_job_1080.sh  send_job_1080_720_480p.sh  send_job_480.sh  send_job_720.sh  usage.txt
media-orchestrator/: Dockerfile  Dockerfile-production  docker-compose-prod.yml  docker-compose.yml  g_setup.py  pytest.ini  requirements.txt  usage.txt
media-orchestrator/app/: .env  database.py  main.py  orchestrator.py  settings.py  usage.txt
media-orchestrator/app/models/: __init__.py
media-orchestrator/app/routes/: __init__.py  deps.py  jobs.py  monitoring.py
media-orchestrator/tests/: conftest.py  requirements-dev.txt  test_database.py  test_models.py  test_orchestrator.py  test_routes_jobs.py  test_routes_monitoring.py  test_settings.py
media-orchestrator/tests/exceptions/: test_main.py  test_routes_jobs.py  test_routes_monitoring.py
nginx/: generate_key.txt  nginx.crt  nginx.key  nginx_cache.conf
nginx/player/: 3-multiview.html  N-multiview.html  index.html  multiview.html
processing_pipeline/: .env  .env.example  .env.example.swp  PocFastAPiMicro.code-workspace  docker-compose-without_redis.yml  docker-compose.yml  main.py  memento.txt  processing_pipeline.txt  pyproject.toml  rebuild.sh
processing_pipeline/audio/: Dockerfile  __init__.py  app.py  worker.py
processing_pipeline/ingest/: Dockerfile  __init__.py  app.py  schemas.py  worker.py
processing_pipeline/live_moq/: Dockerfile  __init__.py  app.py  architecture.md  describe.txt  docker-compose.yml  live_manifest.py  main.py  pyproject.toml  start_from_orchestrateur_redis.sh  worker.py
processing_pipeline/live_moq/script_test/: ffmpeg_publisher.sh  start_from_api_rest.sh
processing_pipeline/monitoring/: loki.yml  prometheus.yml  promtail.yml
processing_pipeline/monitoring/grafana/dashboards/: ott_pipeline.json
processing_pipeline/monitoring/grafana/provisioning/dashboards/: dashboards.yml
processing_pipeline/monitoring/grafana/provisioning/datasources/: datasources.yml
processing_pipeline/packager/: Dockerfile  __init__.py  app.py  worker.py
processing_pipeline/shared/: __init__.py  app_factory.py  config.py  metrics.py  retry.py  s3.py  worker.py
processing_pipeline/transcoder/: Dockerfile  __init__.py  app.py  worker.py
processing_pipeline/vmaf/: Dockerfile  app.py  worker.py
