[build-system]
requires      = ["setuptools>=71", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ══════════════════════════════════════════════════════════════════════════════
[project]
name    = "media-platform"
version = "0.1.0"
description = "OTT Media Processing Pipeline – ingest / transcode / audio / package / live"
readme  = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # ── HTTP client ──────────────────────────────────────────────────────────
    "aiohttp>=3.9",

    # ── Redis Streams ────────────────────────────────────────────────────────
    "redis>=5.0",

    # ── S3 / MinIO ───────────────────────────────────────────────────────────
    "aioboto3>=13",
    "boto3>=1.34",

    # ── Prometheus ───────────────────────────────────────────────────────────
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=6.1",

    # ── Utilitaires ──────────────────────────────────────────────────────────
    "python-multipart>=0.0.9",   # upload fichiers FastAPI
    "httpx>=0.27",               # client HTTP sync/async (tests)
]

# ══════════════════════════════════════════════════════════════════════════════
[project.optional-dependencies]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "psutil"
]

vmaf = [
    "numpy>=1.26",
    "scipy>=1.13",
]

# ══════════════════════════════════════════════════════════════════════════════
[project.scripts]
media-pipeline = "main:main"

# ══════════════════════════════════════════════════════════════════════════════
[tool.setuptools.packages.find]
where = ["."]
include = ["processing_pipeline*"]

# ══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
asyncio_mode    = "auto"
testpaths       = ["tests"]
log_cli         = true
log_cli_level   = "INFO"

# ══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
strict                 = false